updated github link to itself

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ hr {
             <a id="contact"></a>
             <p class="lead">Contact</p>
             <p>If you dig the site, have data, need data, or whatever, find me on Twitter or GitHub.</p>
-            <p><a href="http://twitter.com/sooshie"><img src="twitter-icon.png" height="30" width="30"/></a> <a href="https://github.com/sooshie/Security-Data-Analysis"><img src="GitHub-Mark.png" height="30" width="30"/></a></p>
+            <p><a href="http://twitter.com/sooshie"><img src="twitter-icon.png" height="30" width="30"/></a> <a href="https://github.com/sooshie/secrepo"><img src="GitHub-Mark.png" height="30" width="30"/></a> </p>
 
             <hr/>
             <a id="misc"></a>
