--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ hr {
                      <li><a href="http://commoncrawl.org/">Common Crawl</a> - "open repository of web crawl data that can be accessed and analyzed by anyone" [License Info: Open]</li>
                      <li><a href="http://malware-traffic-analysis.net/">Malware Traffic Analysis</a> - a site with labled exploit kits and phishing emails. [License Info: Unknown]</li>
                      <li><a href="http://www.simpleweb.org/wiki/Traces">Simple Web Traces</a> - Cloud Storage, DDoS, DNSSEC, and may more types of PCAPs. [License Info: Various]</li>
-                     <li><a href="https://www.predict.org/Default.aspx?tabid=40&cs_Category=2">Georga Tech Malware Passive DNS Data</a> - 3 years of malware DNS requests [License Info: Unrestricted]</li>-->
+                     <li><a href="https://www.predict.org/Default.aspx?tabid=40&cs_Category=2">Georga Tech Malware Passive DNS Data</a> - 3 years of malware DNS requests [License Info: Unrestricted]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
