added snort logs for the maccdc dataset

--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@ hr {
                             <li><a href="maccdc2012/ssl.log.gz">ssl.log.gz</a> (2MB)</li>
                             <li><a href="maccdc2012/tunnel.log.gz">tunnel.log.gz</a> (1MB)</li>
                             <li><a href="maccdc2012/weird.log.gz">weird.log.gz</a> (2MB)</li>
+                            <li><a href="maccdc2012/maccdc2012_fast_alert.7z">maccdc2012_fast_alert.7z</a> Snort Fast Alert format logs (10MB)</li>
+                            <li><a href="maccdc2012/maccdc2012_full_alert.7z">maccdc2012_full_alert.7z</a> Snort Full Alert format logs (24MB)</li>
                          </ul>
                      </li>
                      <li>Bro logs generated from various Threatglass samples
@@ -295,7 +297,7 @@ hr {
         
         <div id="footer">
           <div class="container">
-            <p class="text-muted credit">Security Repo - Last updated 7/16/2015</p>
+            <p class="text-muted credit">Security Repo - Last updated 7/18/2015</p>
           </div>
         </div>
 
