added snort logs

--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@ hr {
                             <li><a href="tg/c.zip">Part 3</a> (61MB)</li>
                          </ul>
                      </li>
+                     <li>Snort logs generated from various Threatglass samples
+                         <ul>
+                            <lh>Exploit kits and benign traffic, unlabled data. 6663 samples available.</lh>
+                            <li><a href="tg/tg_snort_fast.7z">tg_snort_fast.7z</a> Snort Fast Alert format logs (5MB)</li>
+                            <li><a href="tg/tg_snort_full.7z">tg_snort_full.7z</a> Snort Full Alert format logs (9MB)</li>
+                         </ul>
+                     </li>
                   </ul>
                </li>
                <li><a id="malware"></a>Malware
@@ -297,7 +304,7 @@ hr {
         
         <div id="footer">
           <div class="container">
-            <p class="text-muted credit">Security Repo - Last updated 7/18/2015</p>
+            <p class="text-muted credit">Security Repo - Last updated 7/20/2015</p>
           </div>
         </div>
 
