fixed layout a bit

--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@ hr {
                             <li><a href="maccdc2012/ssl.log.gz">ssl.log.gz</a> (2MB)</li>
                             <li><a href="maccdc2012/tunnel.log.gz">tunnel.log.gz</a> (1MB)</li>
                             <li><a href="maccdc2012/weird.log.gz">weird.log.gz</a> (2MB)</li>
+                         </ul>
+                         <ul>
+                            <lh>Snort logs
                             <li><a href="maccdc2012/maccdc2012_fast_alert.7z">maccdc2012_fast_alert.7z</a> Snort Fast Alert format logs (10MB)</li>
                             <li><a href="maccdc2012/maccdc2012_full_alert.7z">maccdc2012_full_alert.7z</a> Snort Full Alert format logs (24MB)</li>
                          </ul>
