--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@ hr {
                      <li><a href="https://github.com/vz-risk/VCDB">Verizon VERIS Database</a> - Raw VERIS (filtered) data. [License Info: Creative Commons Attribution-ShareAlike 4.0 International Public License]</li>
                      <li><a href="ftp://download.iwlab.foi.se/dataset/">The Swedish Defence Research Agency Information Warfare Lab</a> PCAP and various log sources [License Info: Unknown]</li>
                      <li><a href="http://www.gwern.net/Black-market%20archives">Black-Market Archives</a> A scraped archive of Dark Net Markets [License Info: Unknown]</li>
+                     <li><a href="https://predict.org/">Protected Repository for the Defense of Infrastructure Against Cyber Threats</a> Lots of data (restricted use) [License Info: <a href="https://predict.org/Portals/0/Documents/Help/PREDICT-UG-HTML5/Content/Rules%20of%20Behavior.htm">License</a>]</li>
                   </ul>
                <li><a id="3p_network"></a>Network
                   <ul>
@@ -246,7 +247,6 @@ hr {
                      <li><a href="http://commoncrawl.org/">Common Crawl</a> - "open repository of web crawl data that can be accessed and analyzed by anyone" [License Info: Open]</li>
                      <li><a href="http://malware-traffic-analysis.net/">Malware Traffic Analysis</a> - a site with labled exploit kits and phishing emails. [License Info: Unknown]</li>
                      <li><a href="http://www.simpleweb.org/wiki/Traces">Simple Web Traces</a> - Cloud Storage, DDoS, DNSSEC, and may more types of PCAPs. [License Info: Various]</li>
-                     <li><a href="https://www.predict.org/Default.aspx?tabid=40&cs_Category=2">Georga Tech Malware Passive DNS Data</a> - 3 years of malware DNS requests [License Info: Unrestricted]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
@@ -307,7 +307,7 @@ hr {
         
         <div id="footer">
           <div class="container">
-            <p class="text-muted credit">Security Repo - Last updated 7/20/2015</p>
+            <p class="text-muted credit">Security Repo - Last updated 7/27/2015</p>
           </div>
         </div>
 
