added lanl data source

--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@ hr {
                      <li><a href="ftp://download.iwlab.foi.se/dataset/">The Swedish Defence Research Agency Information Warfare Lab</a> PCAP and various log sources [License Info: Unknown]</li>
                      <li><a href="http://www.gwern.net/Black-market%20archives">Black-Market Archives</a> A scraped archive of Dark Net Markets [License Info: Unknown]</li>
                      <li><a href="https://predict.org/">Protected Repository for the Defense of Infrastructure Against Cyber Threats</a> Lots of data (restricted use) [License Info: <a href="https://predict.org/Portals/0/Documents/Help/PREDICT-UG-HTML5/Content/Rules%20of%20Behavior.htm">License</a>]</li>
+                     <li><a href="http://csr.lanl.gov/data/cyber1/">Comprehensive, Multi-Source Cyber-Security Events</a> Auth, DNS, process, and flow data. [License Info: Public Domain]</li>
+                     <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                <li><a id="3p_network"></a>Network
                   <ul>
@@ -307,7 +309,7 @@ hr {
         
         <div id="footer">
           <div class="container">
-            <p class="text-muted credit">Security Repo - Last updated 7/27/2015</p>
+            <p class="text-muted credit">Security Repo - Last updated: ##DATE##</p>
           </div>
         </div>
 
