--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@ hr {
                             <li><a href="tg/tg_snort_full.7z">tg_snort_full.7z</a> Snort Full Alert format logs (9MB)</li>
                          </ul>
                      </li>
+                     <li><a href="misc/zeus_dga_domains.txt.zip">Gameover Zeus DGA sample</a> 31000 DGA domains from Dec 2014</li>
                   </ul>
                </li>
                <li><a id="malware"></a>Malware
@@ -225,6 +226,7 @@ hr {
                      <li><a href="http://www.gwern.net/Black-market%20archives">Black-Market Archives</a> A scraped archive of Dark Net Markets [License Info: Unknown]</li>
                      <li><a href="https://predict.org/">Protected Repository for the Defense of Infrastructure Against Cyber Threats</a> Lots of data (restricted use) [License Info: <a href="https://predict.org/Portals/0/Documents/Help/PREDICT-UG-HTML5/Content/Rules%20of%20Behavior.htm">License</a>]</li>
                      <li><a href="http://csr.lanl.gov/data/cyber1/">Comprehensive, Multi-Source Cyber-Security Events</a> Auth, DNS, process, and flow data. [License Info: Public Domain]</li>
+                     <li><a href="http://csr.lanl.gov/data/">Cyber Security Science</a> Multiple datasets from LANL. [License Info: Public Domain]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                <li><a id="3p_network"></a>Network
@@ -249,6 +251,7 @@ hr {
                      <li><a href="http://commoncrawl.org/">Common Crawl</a> - "open repository of web crawl data that can be accessed and analyzed by anyone" [License Info: Open]</li>
                      <li><a href="http://malware-traffic-analysis.net/">Malware Traffic Analysis</a> - a site with labled exploit kits and phishing emails. [License Info: Unknown]</li>
                      <li><a href="http://www.simpleweb.org/wiki/Traces">Simple Web Traces</a> - Cloud Storage, DDoS, DNSSEC, and may more types of PCAPs. [License Info: Various]</li>
+                     <li><a href="https://tools.netsa.cert.org/silk/referencedata.html">SiLK - LBNL-05</a> Anonymized enterprise packet header traces. [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
