minor text and formatting

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ hr {
               <h1>SecRepo.com - Samples of Security Related Data</h1>
             </div>
             <a id="about"></a>
-            <p class="lead">Finding samples of various types of Security related data can sometimes be a giant pain. This is my attempt to keep a somewhat curated list of data I've found, created, or was pointed to. If you perform any kind of analysis with any of this data please let me know and I'd be happy to link it from here or host it here. Hopefully by looking at others research and analysis it will inspire people to add-on, improve, and create new ideas.</p>
+            <p class="lead">Finding samples of various types of Security related can be a giant pain. This is my attempt to keep a somewhat curated list of Security related data I've found, created, or was pointed to. If you perform any kind of analysis with any of this data please let me know and I'd be happy to link it from here or host it here. Hopefully by looking at others research and analysis it will inspire people to add-on, improve, and create new ideas.</p>
             <p>All data generated and hosted by Security Repo is done so under the following license (exceptions noted where applicable).</p>
             <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" property="dct:title" rel="dct:type">Security Repo</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://secrepo.com" property="cc:attributionName" rel="cc:attributionURL">Mike Sconzo</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a></p>
             <p> <br/></p>
@@ -280,7 +280,7 @@ hr {
                      <li><a href="https://github.com/andrew-morris/threat_research">Threat Research</a> - Data collected from SSH honeypots [License Info: Unknown]</li>
                      <li><a href="https://github.com/santiago-bassett/Alienvault-Demo_scripts">Sample logs and script for Alienvault</a> - Various log types (SSH, Cisco, Sonicwall, etc..) [License Info: Unknown]</li>
                      <li><a href="https://github.com/masterdoed/loginjector/tree/master/logSamples">Various log types</a> - Small snippets of each log type [License Info: Unknown]</li>
-                     <li><a href="http://bot.ngx.cc/logs/%23nginx/">#nginx IRC channel logs</a> - Bot logs[License Info: Unknown]</li>
+                     <li><a href="http://bot.ngx.cc/logs/%23nginx/">#nginx IRC channel logs</a> - Bot logs [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                      <li><a href="http://bluesmote.com/" target="_blank">Project Bluesmote</a> - Syrian Bluecoat Proxy Logs [License Info: Public Domain]
                          <ul>
