--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@ hr {
                      <li><a href="http://csr.lanl.gov/data/cyber1/">Comprehensive, Multi-Source Cyber-Security Events</a> Auth, DNS, process, and flow data. [License Info: Public Domain]</li>
                      <li><a href="http://csr.lanl.gov/data/">Cyber Security Science</a> Multiple datasets from LANL. [License Info: Public Domain]</li>
                      <li><a href="http://wisnet.seecs.nust.edu.pk/projects/ENS/DataSets.html">Open Source Enterprise Network Security Solution</a> Network traffic and malicious endpoint data. [License Info: UNKNOWN]</li>
+                     <li><a href="https://www.unsw.adfa.edu.au/australian-centre-for-cyber-security/cybersecurity/ADFA-IDS-Datasets/">Australian Defence Force Academy Linux (ADFA-LD) and Windows (ADFA-WD) Datasets</a> HIDS data [License Info: Free for academic research only]</li>
+
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                <li><a id="3p_network"></a>Network
