added public security log sharing site

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@ hr {
                      <li><a href="https://github.com/santiago-bassett/Alienvault-Demo_scripts">Sample logs and script for Alienvault</a> - Various log types (SSH, Cisco, Sonicwall, etc..) [License Info: Unknown]</li>
                      <li><a href="https://github.com/masterdoed/loginjector/tree/master/logSamples">Various log types</a> - Small snippets of each log type [License Info: Unknown]</li>
                      <li><a href="http://bot.ngx.cc/logs/%23nginx/">#nginx IRC channel logs</a> - Bot logs [License Info: Unknown]</li>
+                     <li><a href="http://log-sharing.dreamhosters.com/">Public Security Log Sharing Site</a> - misc. system logs, NIDS logs, and web proxy logs [License Info: Public, site source (details at top of page)]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                      <li><a href="http://bluesmote.com/" target="_blank">Project Bluesmote</a> - Syrian Bluecoat Proxy Logs [License Info: Public Domain]
                          <ul>
