Added Yahoo! Passwords

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ hr {
                       <li><a href="#3p_malware">Malware</a></li>
                       <li><a href="#3p_system">System</a></li>
                       <li><a href="#3p_file">File</a></li>
+                      <li><a href="#3p_passwd">Password</a></li>
                     </ul>
                   </li>
                   <li><a href="#misc">Misc</a></li>
@@ -301,6 +302,12 @@ hr {
                      <li><a href="http://contagiodump.blogspot.com/" target="_blank">contagio malware dump</a> - A resource for files/data regarding targeted attacks [License Info: Unknown]</li>
                      <li><a href="http://virusshare.com/" target="_blank">VirusShare.com - Because Sharing is Caring</a> [Login Required] - Huge collection of downloadable/torrentable malware files for various architectures [License Info: Unknown]</li>
                      <li><a href="http://vxheaven.org/faq.php#whole">Vx Heaven</a> - sorted by AV set of virus samples (available via BitTorrent) [License Info: Unknown]</li>
+                     <!--<li><a href=""></a> [License Info: ]</li>-->
+                  </ul>
+               </li>
+               <li><a id="3p_passwd"></a>Password
+                  <ul>
+                     <li><a href="https://figshare.com/articles/Yahoo_Password_Frequency_Corpus/2057937" target="_blank">Yahoo! Password Frequency Corpus/a> - This dataset includes sanitized password frequency lists collected from Yahoo in May 2011.  [License Info: CC-0]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
