added ADFA dataset page

--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@ hr {
                      <li><a href="http://bot.ngx.cc/logs/%23nginx/">#nginx IRC channel logs</a> - Bot logs [License Info: Unknown]</li>
                      <li><a href="http://log-sharing.dreamhosters.com/">Public Security Log Sharing Site</a> - misc. system logs, NIDS logs, and web proxy logs [License Info: Public, site source (details at top of page)]</li>
                      <li><a href="https://www.cert.org/insider-threat/tools/index.cfm">CERT Insider Threat Tools</a> - "These datasets provide both synthetic background data and data from synthetic malicious actors" [License Info: Unknown]</li>
+                     <li><a href="https://www.unsw.adfa.edu.au/australian-centre-for-cyber-security/cybersecurity/ADFA-IDS-Datasets/">ADFA IDS Datasets</a> - The datasets cover both Linux and Windows; they are designed for evaluation by system call based HIDS. [License Info: Listed on site]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                      <li><a href="http://bluesmote.com/" target="_blank">Project Bluesmote</a> - Syrian Bluecoat Proxy Logs [License Info: Public Domain]
                          <ul>
