--- a/index.html
+++ b/index.html
@@ -186,6 +186,8 @@ hr {
                          </ul>
                      </li>
                      <li><a href="misc/zeus_dga_domains.txt.zip">Gameover Zeus DGA sample</a> 31000 DGA domains from Dec 2014</li>
+                     <li><a href="domaindata/domainmovement.zip">Domain Transfer Data</a> Old domain transefer data from several registrars, JSON format. (8MB)</li>
+                     <!--<li><a href=""></a></li>-->
                   </ul>
                </li>
                <li><a id="malware"></a>Malware
