Threat Feed and other updates

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ hr {
                       <li><a href="#3p_system">System</a></li>
                       <li><a href="#3p_file">File</a></li>
                       <li><a href="#3p_passwd">Password</a></li>
+                      <li><a href="#3p_threat">Threat Feeds</a></li>
                     </ul>
                   </li>
                   <li><a href="#misc">Misc</a></li>
@@ -283,7 +284,8 @@ hr {
                          </ul>-->
                      </li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
-                     <li><a href="http://user.informatik.uni-goettingen.de/~darp/drebin/">Drebin Dataset</a> Android malware, must submit proof of who you are for access. [License Info: Listed on site]</li>
+                     <li><a href="http://malwaredb.malekal.com/">Malware DB by Malekal</a> - A list of malicious files, complete with sample link and some AV results [License Info: Unknown]</li>
+                     <li><a href="http://user.informatik.uni-goettingen.de/~darp/drebin/">Drebin Dataset</a> - Android malware, must submit proof of who you are for access. [License Info: Listed on site]</li>
                   </ul>
                </li>
                <li><a id="3p_system"></a>System
@@ -306,12 +308,31 @@ hr {
                      <li><a href="http://contagiodump.blogspot.com/" target="_blank">contagio malware dump</a> - A resource for files/data regarding targeted attacks [License Info: Unknown]</li>
                      <li><a href="http://virusshare.com/" target="_blank">VirusShare.com - Because Sharing is Caring</a> [Login Required] - Huge collection of downloadable/torrentable malware files for various architectures [License Info: Unknown]</li>
                      <li><a href="http://vxheaven.org/faq.php#whole">Vx Heaven</a> - sorted by AV set of virus samples (available via BitTorrent) [License Info: Unknown]</li>
+                     <li><a href="https://techhelplist.com/spam-list">TechHelpList SPAM List</a> - Samples of SPAM messages and associated threat that was delivered in addition to other rich information [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
                <li><a id="3p_passwd"></a>Password
                   <ul>
                      <li><a href="https://figshare.com/articles/Yahoo_Password_Frequency_Corpus/2057937" target="_blank">Yahoo! Password Frequency Corpus</a> - This dataset includes sanitized password frequency lists collected from Yahoo in May 2011.  [License Info: CC-0]</li>
+                     <!--<li><a href=""></a> [License Info: ]</li>-->
+                  </ul>
+               </li>
+               <li><a id="3p_threat"></a>Threat Feeds
+                  <ul>
+                     <li><a href="http://www.webiron.com/abuse_feed/">ISP Abuse Email Feed</a> - Feed showing IOCs from various Abuse reports (other feeds also on the site) [License Info: Unknown]</li>
+                     <li><a href="http://cybertracker.malwarehunterteam.com/">Malware Hunter Team CyberTracker</a> - Feeds of files, C2 servers, phishing sites and emails [License Info: Unknown]</li>
+                     <li><a href="http://vxvault.net/ViriList.php">VXvault</a> - List of URLs and MD5s that are malicious [License Info: Unknown]</li>
+                     <li><a href="https://otx.alienvault.com/browse">AlienVault OTX</a> - Build your own threat feed from community contributors, complete with API [License Info: <a href="https://www.alienvault.com/terms/may2014">Legal Info</a>]</li>
+                     <li><a href="http://tracker.h3x.eu/families">Tracker</a> - Malware hashes and their associated campaigns [License Info: <a href="http://tracker.h3x.eu/about/400">About</a>]</li>
+                     <li><a href="https://www.malwaredomainlist.com/mdl.php">Malware Domain List</a> - Labeled malicious domains and IPs [License Info: Unknown]</li>
+                     <li><a href="http://support.clean-mx.de/clean-mx/phishing.php">Clean MX Phishing DB</a> - URLs and IPs associated with phishing emails, also targets are listed where determined [License Info: Unknown]</li>
+                     <li><a href="http://support.clean-mx.com/clean-mx/viruses.php">Clean MX Virus DB</a> - Labeled URLs and IPs associated with various types of malware [License Info: Unknown]</li>
+                     <li><a href="https://threatcenter.crdf.fr/">CRDF Threat Center</a> - Labeled MD5s and reputation data [License Info: Open Usage]</li>
+                     <li><a href="https://techhelplist.com/maltlqr/">TechHelpList MalTLQR Upatre and Dyreza Tracker</a> - IPs and hashes for Upatre and Dyreza families [License Info: Unknown]</li>
+                     <li><a href="http://cybercrime-tracker.net/">CyberCrime Tracker</a> - Labled URLs and IPs for various malware families [License Info: Unknown]</li>
+                     <li><a href="http://cybercrime-tracker.net/zbox.php">CyberCrime ZbotScan</a> - List of hashes associated with various Zbot variants [License Info: Unknown]</li>
+                     <li><a href="https://www.abuse.ch/">abuse.ch trackers</a> - Trackers for ransomeware, ZeuS, SSL Blacklist, SpyEye, Palevo, and Feodo [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
