added labeled virusshare data by @_delta_zero

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@ hr {
                              <li>todo</li>
                          </ul>-->
                      </li>
+                     <li><a href="https://drive.google.com/file/d/0B_IN6RzP69b2TkNrYVdOMnQ4LVE/view">Labeled VirusShare data by @_delta_zero</a> - VirusShare data that has been consitently labeled (7zip download) [License Info: none]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                      <li><a href="http://malwaredb.malekal.com/">Malware DB by Malekal</a> - A list of malicious files, complete with sample link and some AV results [License Info: Unknown]</li>
                      <li><a href="http://user.informatik.uni-goettingen.de/~darp/drebin/">Drebin Dataset</a> - Android malware, must submit proof of who you are for access. [License Info: Listed on site]</li>
