added closing </lh> tag

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ hr {
                             <li><a href="maccdc2012/weird.log.gz" download>weird.log.gz</a> (2MB)</li>
                          </ul>
                          <ul>
-                            <lh>Snort logs
+                            <lh>Snort logs</lh>
                             <li><a href="maccdc2012/maccdc2012_fast_alert.7z" download>maccdc2012_fast_alert.7z</a> Snort Fast Alert format logs (10MB)</li>
                             <li><a href="maccdc2012/maccdc2012_full_alert.7z" download>maccdc2012_full_alert.7z</a> Snort Full Alert format logs (24MB)</li>
                          </ul>
