added some ICS logs and source

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ hr {
                      </li>
                      <li><a href="misc/zeus_dga_domains.txt.zip" download>Gameover Zeus DGA sample</a> 31000 DGA domains from Dec 2014</li>
                      <li><a href="domaindata/domainmovement.zip" download>Domain Transfer Data</a> Old domain transefer data from several registrars, JSON format. (8MB)</li>
+                     <li><a href="scada/scada_logs.zip" download>Modbus and DNP3 logs</a> ICS logs generated w/Bro from various PCAPs (1MB)</li>
                      <!--<li><a href=""></a></li>-->
                   </ul>
                </li>
@@ -267,6 +268,7 @@ hr {
                      <li><a href="http://www.caida.org/data/passive/sipscan_dataset.xml">UCSD Network Telescope Dataset on the Sipscan</a> Public and restricted datasets of various malware and other network traffic. [License Info: Available on dataset page]</li>
                      <li><a href="https://www.unsw.adfa.edu.au/australian-centre-for-cyber-security/cybersecurity/ADFA-NB15-Datasets/">UNSW-NB15</a> This data set has nine families of attacks, namely, Fuzzers, Analysis, Backdoors, DoS, Exploits, Generic, Reconnaissance, Shellcode and Worms. (CSV data) [License Info: Unknown]</li>
                      <li><a href="https://mcfp.felk.cvut.cz/publicDatasets/">Stratosphere IPS Public Datasets</a> PCAPs, Samples, etc... [License Info: Unknown]</li>
+                     <li><a href="https://github.com/hslatman/awesome-industrial-control-system-security">Awesome Industrial Control System Security</a> - Has links to SCADA PCAPs and other SCADA related resources [License Info: Apache License 2.0 (site), Data: various]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
