--- a/index.html
+++ b/index.html
@@ -272,6 +272,8 @@ hr {
                      <li><a href="https://www.unsw.adfa.edu.au/australian-centre-for-cyber-security/cybersecurity/ADFA-NB15-Datasets/">UNSW-NB15</a> This data set has nine families of attacks, namely, Fuzzers, Analysis, Backdoors, DoS, Exploits, Generic, Reconnaissance, Shellcode and Worms. (CSV data) [License Info: Unknown]</li>
                      <li><a href="https://mcfp.felk.cvut.cz/publicDatasets/">Stratosphere IPS Public Datasets</a> PCAPs, Samples, etc... [License Info: Unknown]</li>
                      <li><a href="https://github.com/hslatman/awesome-industrial-control-system-security">Awesome Industrial Control System Security</a> - Has links to SCADA PCAPs and other SCADA related resources [License Info: Apache License 2.0 (site), Data: various]</li>
+                     <li><a href="https://s3-us-west-1.amazonaws.com/umbrella-static/index.html">Cisco Umbrella Popularity List</a> - Top 1 million most daily popular domains [License Info: Unknown]</li>
+                     <li><a href="http://s3.amazonaws.com/alexa-static/top-1m.csv.zip">Alexa Top 1 Million</a> - The static 1 million most popular sites by Alexa [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
@@ -289,9 +291,12 @@ hr {
                          </ul>-->
                      </li>
                      <li><a href="https://drive.google.com/file/d/0B_IN6RzP69b2TkNrYVdOMnQ4LVE/view">Labeled VirusShare data by @_delta_zero</a> - VirusShare data that has been consitently labeled (7zip download) [License Info: none]</li>
-                     <!--<li><a href=""></a> [License Info: ]</li>-->
+                     <li><a href="https://www2.cs.arizona.edu/projects/lynx-project/Samples/">lynx Project Samples</a> - Benign samples that behave like malware (<a href="https://www2.cs.arizona.edu/projects/lynx-project/">lynx Project</a>)  [License Info: Unknown]</li>
+                     <li><a href=http://virussign.com/index.html"">VirusSign</a> - Free and Paid account access to several million malware samples [License Info: Unknown]</li>
+                     <li><a href="http://www.offensivecomputing.net/">Open Malware</a> - Searchable malware repo with free downloads of samples [License Info: Unknown]</li>
                      <li><a href="http://malwaredb.malekal.com/">Malware DB by Malekal</a> - A list of malicious files, complete with sample link and some AV results [License Info: Unknown]</li>
                      <li><a href="http://user.informatik.uni-goettingen.de/~darp/drebin/">Drebin Dataset</a> - Android malware, must submit proof of who you are for access. [License Info: Listed on site]</li>
+                     <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
                <li><a id="3p_system"></a>System
