--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@ hr {
                      <li><a href="https://www.unsw.adfa.edu.au/australian-centre-for-cyber-security/cybersecurity/ADFA-IDS-Datasets/">Australian Defence Force Academy Linux (ADFA-LD) and Windows (ADFA-WD) Datasets</a> HIDS data [License Info: Free for academic research only]</li>
                      <li><a href="http://www.ccssforum.org/malware-certificates.php">CCSS - Digital Certs Used by Malare</a> - A listing of certificate serial numbers that have been used by malware [License Info: Unknown]</li>
                      <li><a href="http://bigdata.ise.bgu.ac.il/sherlock/index.html#/">SherLock Dataset</a> - Smartphone dataset with software and hardware sensor information surrounding mobile malware [License Info: 3 year full access, listed on site]</li>
+                     <li><a href="https://github.com/foospidy/payloads">payloads</a> - A collection of web attack payloads. [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                <li><a id="3p_network"></a>Network
@@ -274,6 +275,7 @@ hr {
                      <li><a href="https://github.com/hslatman/awesome-industrial-control-system-security">Awesome Industrial Control System Security</a> - Has links to SCADA PCAPs and other SCADA related resources [License Info: Apache License 2.0 (site), Data: various]</li>
                      <li><a href="https://s3-us-west-1.amazonaws.com/umbrella-static/index.html">Cisco Umbrella Popularity List</a> - Top 1 million most daily popular domains [License Info: Unknown]</li>
                      <li><a href="http://s3.amazonaws.com/alexa-static/top-1m.csv.zip">Alexa Top 1 Million</a> - The static 1 million most popular sites by Alexa [License Info: Unknown]</li>
+                     <li><a href="https://github.com/faizann24/Using-machine-learning-to-detect-malicious-URLs">Using machine learning to detect malicious URLs</a> - Cade and labeled URL data. [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
@@ -295,8 +297,7 @@ hr {
                      <li><a href=http://virussign.com/index.html"">VirusSign</a> - Free and Paid account access to several million malware samples [License Info: Unknown]</li>
                      <li><a href="http://www.offensivecomputing.net/">Open Malware</a> - Searchable malware repo with free downloads of samples [License Info: Unknown]</li>
                      <li><a href="http://malwaredb.malekal.com/">Malware DB by Malekal</a> - A list of malicious files, complete with sample link and some AV results [License Info: Unknown]</li>
-                     <li><a href="http://user.informatik.uni-goettingen.de/~darp/drebin/">Drebin Dataset</a> - Android malware, must submit proof of who you are for access. [License Info: Listed on site]</li>
-                     <!--<li><a href=""></a> [License Info: ]</li>-->
+                     <li><a href="https://www.sec.cs.tu-bs.de/~danarp/drebin/">Drebin Dataset</a> - Android malware, must submit proof of who you are for access. [License Info: Listed on site]</li>
                   </ul>
                </li>
                <li><a id="3p_system"></a>System
