--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ hr {
                <li><a id="malware"></a>Malware
                   <ul>
                      <li><a href="pe_static/zeus.zip" download>Static information about Zeus binaries</a> - Static information (JSON) of about ~8k samples from <a href="https://zeustracker.abuse.ch/downloads/zeusbinaries.zip" download>ZeuS Tracker</a></li>
-                     <li><a href="pe_static/ap1.zip" download>Static information about APT1 binaries</a> - Static information (JSON) of APT1 samples from  <a href="https://virusshare.com/" download>VirusShare</a></li>
+                     <li><a href="pe_static/apt1.zip" download>Static information about APT1 binaries</a> - Static information (JSON) of APT1 samples from  <a href="https://virusshare.com/" download>VirusShare</a></li>
                      <li><a href="pe_static/op-cleaver.zip" download>Static information about Op Cleaver binaries</a> - Static information of Op Cleaver related binaries.</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
