unit42 and majestic million

--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@ hr {
                      <li><a href="https://s3-us-west-1.amazonaws.com/umbrella-static/index.html">Cisco Umbrella Popularity List</a> - Top 1 million most daily popular domains [License Info: Unknown]</li>
                      <li><a href="http://s3.amazonaws.com/alexa-static/top-1m.csv.zip">Alexa Top 1 Million</a> - The static 1 million most popular sites by Alexa [License Info: Unknown]</li>
                      <li><a href="https://github.com/faizann24/Using-machine-learning-to-detect-malicious-URLs">Using machine learning to detect malicious URLs</a> - Cade and labeled URL data. [License Info: Unknown]</li>
+                     <li><a href="https://majestic.com/reports/majestic-million">Majestic Million Domains</a> - Top million domains with the most referring subnets.  [License Info: Attribution 3.0 Unported (CC BY 3.0)]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
@@ -348,6 +349,7 @@ hr {
                      <li><a href="http://cybercrime-tracker.net/">CyberCrime Tracker</a> - Labled URLs and IPs for various malware families [License Info: Unknown]</li>
                      <li><a href="http://cybercrime-tracker.net/zbox.php">CyberCrime ZbotScan</a> - List of hashes associated with various Zbot variants [License Info: Unknown]</li>
                      <li><a href="https://www.abuse.ch/">abuse.ch trackers</a> - Trackers for ransomeware, ZeuS, SSL Blacklist, SpyEye, Palevo, and Feodo [License Info: Unknown]</li>
+                     <li><a href="https://github.com/pan-unit42/iocs">Unit 42 Indicators</a> - Indicators from the Unit 42 reports [License Info: Unknown]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
