added jask and jzadeh data sets

--- a/index.html
+++ b/index.html
@@ -286,6 +286,9 @@ hr {
                              <li>todo</li>
                          </ul>-->
                      </li>
+                     <li><a href="https://github.com/jasklabs/blackhat2017">Data for a Black Hat 2017 Handout</a> - Various types of data (network, host, etc...) for different use cases (e.g. Remote Exploitation, Spear Phishing, Ransomware, WebShell) [License Info: Apache 2]</li>
+                     <li><a href="https://github.com/jzadeh/aktaion">Aktion Open Source Exploit Detection Tool</a> - Variety of different kinds of data centered around exploit detection [License Info: Apache 2]</li>
+                     <li><a href="https://github.com/jzadeh/aktaion2">Atkion V2 Open Source Exploit Detection Tool</a> - Variety of different kinds of data centered around exploit detection [License Info: Apache 2]</li>
                      <!--<li><a href=""></a> [License Info: ]</li>-->
                   </ul>
                </li>
